Remove Android publisher and migrate to self-hosting